# gvae

./: .gitignore  CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  reproducibility.md  requirements.txt
app/: streamlit_app.py
archive/: README.md  biology_with_generelevance.py  build_target_support_table.py  dynamic_gwas_repr.slurm  dynamic_representation_vs_gwas.R  enrichment_array.slurm  gene-pathway_enrichment.py  gene-pathway_enrichment.slurm  gvae.py  gvae.slurm  gwas-xai.R  gwas-xai.slurm  latent_classification.py  original_user_pasted_code.txt  qgvae_grid_prune.slurm  snp_prioritization.py
archive/figures/: README.md  annotation.R  figure2.R  figure4.R  mainfigures.md
archive/figures/main-figures/: README.md
demo/: biology.py  data.py  downstream.py  metrics.py  models.py  plotting.py  train.py
docs/: github_setup_guide.md  manuscript_to_repo_mapping.md  repo_migration_map.md  reviewer_quickstart.md  user_manual.md
examples/configs/: binary_demo.yaml  quantitative_demo.yaml
examples/manuscript_summary_tables/: combined_cS2G.tsv  consolidated.tsv  drug_target_gene_sets.tsv
examples/manuscript_summary_tables/bim/: ALZ.bim  ASD.bim  BD.bim  BMI.bim  BRC.bim  CAD.bim
examples/manuscript_summary_tables/figure4_inputs/: consolidated.tsv
examples/manuscript_summary_tables/gwas/: ALZ_gwas.assoc  ASD_gwas.assoc  BD_gwas.assoc  BMI_gwas.assoc  BRC_gwas.assoc  CAD_gwas.assoc
examples/synthetic_data/: README.md
examples/synthetic_data/binary_demo/: demo.bim  demo_gwas.assoc  demo_origin.phen  demo_origin.tfam  demo_origin.tped  metadata.json
examples/synthetic_data/quant_demo/: demo.bed  demo.fam  (+3 more)
figure_scripts/: figure2_robustness_distributions.R  figure3_reconstruction_and_prediction.R  figure4_gene_pathway_relevance.R  figure5_dynamic_representation_vs_gwas.R
gvae/: __init__.py  gene-pathway_enrichment.py  gene-pathway_enrichment.slurm  gvae.py  gvae.slurm  gwas-xai.slurm  latent_classification.py  metrics.py  model.py  snp_prioritization.py  utils.py  xai.py
gvae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gvae/figures/: figure2.R  figure3.R  figure4.R
scripts/: build_paper_like_figures.py  generate_synthetic_data.py  prioritize_snps.py  run_demo_pipeline.py  run_downstream_prediction.py  run_gene_pathway_analysis.py  train_representation.py
scripts/hpc/: biology_one_disease.slurm  dynamic_representation_vs_gwas.slurm  qgvae_grid_prune.slurm
scripts/internal/: biology_with_generelevance.py  latent_classification.py  prioritize_snps_from_latent.py  qgvae_bed.py
scripts/verbatim_from_user/: README.md
software/: config_smoke_test.yaml  config_template.yaml  gvae_pipeline.py  readme.md
